radarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: db3000
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/component: server
  type: ClusterIP
