radarr/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - db3000.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /radarr
      backendRefs:
        - name: radarr
          port: 80
          kind: Service
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
