radarr/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr.xmple.io`)
    kind: Rule
    services:
    - name: radarr
      port: 80
  tls:
    secretName: radarr-tls
    options:
      name: mintls13
      namespace: traefik
